# MayaTok-BPE

./: .gitignore  Cargo.toml  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
dataset_training/: train.py
examples/: benchmark.py  non_stream_train_your_own_vocab.py  test_corpus.txt  train_your_own_vocab.py
src/: bpe_tokenizer_lib.rs  lib.rs  text_normalizer.rs
