 [package]
 name = "mayatok-bpe"
 version = "0.1.0"
 authors = ["Ashwin Rajhans <ashwinrajhansofficial@gmail.com>"]
 description = "A BPE Tokenizer developed in Rust. "
 edition = "2024"
 license = "Apache 2.0"
 repository = "https://github.com/AlgoBrother/MayaTok-BPE"
 readme = "README.md"
 keywords = ["tokenizer", "bpe", "rust", "nlp"]
 categories = ["text-processing", "machine-learning"]

 [dependencies]
 ahash = "0.8.12"
 bincode = "1.3.3"
 crossbeam-channel = "0.5.15"
 hashbrown = {version = "0.15.4", features = ["serde", "rayon"]}
 lazy_static = "1.5.0"
 num_cpus = "1.17.0"
 once_cell = "1.21.3"
 pyo3 = {version = "0.25.1", features = ["extension-module"]}
 rayon = "1.10.0"
 regex = "1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 thiserror = "2.0.12"
 unicode-normalization = "0.1"

 [lib]
name = "mayatok_bpe"
crate-type = ["cdylib"]

[profile.release]
debug = true




